# nac-test

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FOLLOW_UP_TASKS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  RESULT_PROCESSING_REFACTORING_PLAN.md  ROBOT_RESULTS_INTEGRATION.md  SSH_AUTHENTICATION_INVESTIGATION_REPORT.md  Team-Feedback.md  bandit-security-report.json  issue-588-quicksilver-fix-draft.md  nac-test-diagnostic.sh  pyproject.toml  renovate.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_adapter_issue.yml  bug_report.yml  config.yml  documentation_update.yml  feature_request.yml  html_reporting_issue.yml  question.yml
.github/workflows/: perf-test.yml  release.yml  test.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: cold-start-issue-432.md  d2d-performance-issue-description.md  d2d-platform-comparison-analysis.md  github-issue-update-task-run-speedup.md  issue-436-content.md  issue-436-update.md  issue-corrections-summary.md  issue-disconnect-delay.md  issue-review-summary.md  linux-run-comparison.md  linux-vs-macos-performance-analysis.md  macos-granular-timing-analysis.md  next-steps-linux-investigation.md  performance-test-plan.md  pyats-timeout-solution.md  task-run-critical-findings.md  task-run-timeout-analysis.md  test-coverage-improvements.md  unicon-disconnect-delay-analysis.md
.sisyphus/evidence/: task-1-cleanup-tests.txt  task-1-no-try-except.txt  task-1-sha-pins.txt  task-2-permissions.txt  task-3-curl-replacement.txt
.sisyphus/plans/: add-type-hints-and-precommit.md  gha-security-remediation.md  test-coverage-edge-cases.md
__nac_tmp_epwwum2j/: merged_data_model_test_variables.yaml  test1.robot
__nac_tmp_epwwum2j/robot_results/: xunit.xml
__nac_tmp_sxlajtj3/: keywords.resource  merged_data_model_test_variables.yaml  ordering.txt
__nac_tmp_sxlajtj3/robot_results/: xunit.xml
__nac_tmp_sxlajtj3/suite_1/: concurrent.robot  disabled-concurrent.robot  empty_suite.robot  lowercase-concurrent.robot  mixedcase-concurrent.robot  non-concurrent.robot
dev-docs/: PRD_AND_ARCHITECTURE.md  PRD_SSH_D2D_GENERIC_ARCHITECTURE.md  REPORTING_PLAN_OPTION_D.md  SSH_D2D_TECHNICAL_PLAN.md  no-controller-var-PRD.md  no-controller-var-tech-plan.md  pressure-test-report-no-controller-var.md  pyats-common-migration-PRD.md  renovate.md
iac_test/: robot_writer.py
nac_test/: __init__.py  __main__.py  _env.py  combined_orchestrator.py  data_merger.py  exceptions.py  pabot.py  robot_writer.py
nac_test/cli/: diagnostic.py  main.py  options.py
nac_test/core/: __init__.py  constants.py  error_classification.py  http_constants.py  models.py  types.py
nac_test/pyats/: __init__.py  constants.py  orchestrator.py  progress_plugin.py  progress_reporter.py
nac_test/pyats_core/: __init__.py  constants.py  orchestrator.py
nac_test/robot/: NacProgressListenerSocket.py  __init__.py  orchestrator.py  pabot.py  progress_event_server.py  robot_writer.py
nac_test/support/: README.md  nac-test-diagnostic.sh
nac_test/utils/: __init__.py  asyncio_utils.py  cleanup.py  controller.py  device_validation.py  environment.py  file_discovery.py  formatting.py  logging.py  path_setup.py  path_utils.py  platform.py  strings.py  system_resources.py  terminal.py  url.py  xunit_merger.py  yaml.py
pabot_results/0/: robot_argfile.txt  robot_stdout.out
scripts/: license-headers.sh
stubs/pyats/: __init__.pyi  aetest.pyi
support/: README.md  nac-test-diagnostic.sh
tests/: conftest.py
tests/e2e/: README.md  __init__.py  config.py  conftest.py  html_helpers.py  test_e2e_scenarios.py
tests/integration/: conftest.py  mock_server.py  test_broker.py  test_cleanup_atexit.py  test_cli_aci_validation.py  test_cli_basic.py  test_cli_controller_auth.py  test_cli_extra_args.py  test_cli_include_exclude.py  test_cli_ordering.py  test_cli_rendering.py  test_compat_ci_pipelines.py  test_connection_broker_failure_modes.py  test_controller_detection_integration.py  test_discovery_integration.py  test_e2e_combined_failure.py  test_e2e_combined_success.py  test_integration.py  test_integration_pyats.py  test_integration_robot_pabot.py  test_integration_robot_pyats.py  test_preflight_auth_integration.py  test_robot_progress_listener_socket.py  utils.py
tests/pyats_core/: conftest.py  test_device_executor_env_propagation.py  test_orchestrator_config_error.py  test_orchestrator_controller.py  test_orchestrator_controller_detection.py  test_orchestrator_controller_param.py  test_orchestrator_dry_run.py  test_orchestrator_env_var.py
tests/unit/: conftest.py  test_archive_inspector.py  test_combined_orchestrator_controller.py  test_combined_orchestrator_flow.py  test_combined_orchestrator_python311.py  test_compat_shims.py  test_connection_manager_utils_integration.py  test_data_merger.py  test_env.py  test_failing.py  test_pabot_args.py  test_pabot_loglevel.py  test_pyats_core_ssh_connection_utils.py  test_robot_progress_listener.py  test_ssh_base_test_validation.py  test_subprocess_runner.py  test_terminal.py  test_terminal_error_messages.py  test_test_type_resolver.py  test_testbed_generator.py  test_testbed_generator_merge.py  test_xunit_merger.py
tests/utils/: test_cleanup.py  test_controller.py  test_strings.py  test_system_resources.py
workspace/: PR636_REVIEW.md  app.py  clear-env.sh  commit-message-612.md  github-action-security-audit.py  pr-descr.md  pr612-clean-implementation-plan.md  pyats-to-robot-xml-analysis.md  pyats_to_robot_converter.py  rebase-integration-plan.md  review-641-round2.md  review-641.md  review-b356a2e.md  set-cc-env.sh  set-sdwan-env.sh
workspace/catc/: main.tf
workspace/data/: data.yaml
workspace/docs/: pyats-result-data-bug.md  results-json-enrichment-issue.md  results-json-enrichment-summary.md
workspace/integration_test_output/: merged_data_model_test_variables.yaml
workspace/pyats-bug/: README.md  empty_testbed.yaml  github-issue.md  job.py  results_actual.json  test_step_data_bug.py
workspace/pyats_results/: combined_summary.html
(+875 files in other folders)
